# wintab-adapter

./: .gitignore  CMakeLists.txt  LICENSE  README.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build.yml  combine.yml  make-copyright-notices-file.ps1  populate-vcpkg-cache.yaml
cmake/: hybrid-crt.cmake  smol-binaries.cmake  version-rc.cmake  version.rc
include/OTDIPC/: DebugMessage.hpp  DeviceInfo.hpp  Header.hpp  Hello.hpp  MessageType.hpp  Ping.hpp  State.hpp
include/OTDIPC/V1/: DeviceInfo.hpp  Header.hpp  MessageType.hpp  NamedPipePath.hpp  Ping.hpp  README.md  State.hpp
src/: CMakeLists.txt  ForegroundOverride.cpp  ForegroundOverride.hpp  ForegroundOverrideDll.cpp  IHandler.hpp  InjectDll.cpp  InjectDll.hpp  V1Server.cpp  V1Server.hpp  V2Server.cpp  V2Server.hpp  WintabTablet.cpp  WintabTablet.hpp  main.cpp  utf8.cpp  utf8.hpp
